force-app/main/default/objects/Fixed_Fare__c/Fixed_Fare__c.object-meta.xml
<CustomObject>
    <label>Fixed Fare</label>
    <nameField>
        <label>Fixed Fare</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Fares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>