force-app/main/default/objects/Fixed_Fare__c/fields/Departure_Point__c.field-meta.xml
<CustomField>
    <fullName>Departure_Point__c</fullName>
    <label>Departure Point</label>
    <length>18</length>
    <type>Text</type>
</CustomField>