force-app/main/default/objects/Fixed_Fare__c/fields/Flight_Season__c.field-meta.xml
<CustomField>
    <fullName>Flight_Season__c</fullName>
    <label>Flight Season</label>
    <length>255</length>
    <type>Text</type>
</CustomField>