force-app/main/default/objects/Fixed_Fare__c/fields/From_Month__c.field-meta.xml
<CustomField>
    <fullName>From_Month__c</fullName>
    <label>From Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>