force-app/main/default/objects/Fixed_Fare__c/fields/From_To__c.field-meta.xml
<CustomField>
    <fullName>From_To__c</fullName>
    <label>From To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>