force-app/main/default/objects/Fixed_Fare__c/fields/To_Month__c.field-meta.xml
<CustomField>
    <fullName>To_Month__c</fullName>
    <label>To Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>