force-app/main/default/objects/Fixed_Fare__c/fields/Transformed_To_Month__c.field-meta.xml
<CustomField>
    <fullName>Transformed_To_Month__c</fullName>
    <formula>IF( From_Month__c  >  To_Month__c , To_Month__c+12, To_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transformed To Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>