force-app/main/default/objects/Fixed_Fare__c/fields/Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value__c</fullName>
    <formula>Product__c +  Program__c +  Destination__c + Departure_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Value</label>
    <type>Text</type>
</CustomField>