force-app/main/default/objects/Fixed_Fare__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Program__c</columns>
    <columns>Departure_Point__c</columns>
    <columns>Destination__c</columns>
    <columns>Flight_Season__c</columns>
    <columns>From_To__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>ILSU</value>
    </filters>
    <filters>
        <field>Departure_Point__c</field>
        <operation>equals</operation>
        <value>PAR</value>
    </filters>
    <label>All</label>
</ListView>